Bug fixes and basic ranking by ts intra cluster

--- a/google_news/templates/google_news/post_list.html
+++ b/google_news/templates/google_news/post_list.html
@@ -14,7 +14,7 @@
                 <a href= {{cluster.0.0}} style="color: black"><h4><b>{{cluster.0.1}}</b></br> <small>{{cluster.0.3}}</small></h4></a>
                 </br>
                         <ul style="font-weight: bold;">
-                                 {%for url,title,img,date in cluster%}
+                                 {%for url,title,img,date,rank in cluster%}
                                  {% if not forloop.first %}
                                 <li><a href = {{url}} style="color: black">{{title}}</a></br> <small>{{date}}</small></li>
                                 {% endif%}
