--- a/google_news/templates/google_news/post_list.html
+++ b/google_news/templates/google_news/post_list.html
@@ -4,6 +4,7 @@
 
  <h4><strong><big> {{category}}</strong></big> </h4>
 {%for cluster in list_of_cluster%}
+
  <div class="panel panel-default">
         
 <div class="panel-body">
@@ -11,28 +12,37 @@
         
                 
                 
-                <a href= {{cluster.0.0}} style="color: black"><h4><b>{{cluster.0.1}}</b></br> <small>{{cluster.0.5}}</small><small>{{"&nbsp; . &nbsp;"}}</small> <small>{{cluster.0.3}}</small><br><small>{{cluster.0.6}}</small></h4></a>
-                </br>
+                <a href= {{cluster.0.0}} style="color: black"><h4><b>{{cluster.0.1}}</b></br> <small>{{cluster.0.5}}</small><small>{{"&nbsp; . &nbsp;"}}</small> <small>{{cluster.0.3}}</small><br><small>{{cluster.0.6}}</small></h4></a></br>
+
                         <ul style="font-weight: bold;">
                                  {%for url,title,img,date,rank,org_name,summary in cluster%}
                                  {% if not forloop.first %}
-                                <li><a href = {{url}} style="color: black">{{title}}</a></br> <small>{{org_name}}</small><small>{{"&nbsp; . &nbsp;"}}</small><small>{{date}}</small></li>
-                                {% endif%}
-                                {%endfor%}
+                                    <li><a href = {{url}} style="color: black">{{title}}</a></br> <small>{{org_name}}</small><small>{{"&nbsp; . &nbsp;"}}</small><small>{{date}}</small></li>
+                                 {% endif%}
+                                 {%endfor%}
                                
                         </ul>
-
-        </div>  
-        <div class="col-sm-2 text-center">
-                <img src={{cluster.0.2}} class="img-rounded" height="105" width="105" alt="Avatar">
-                </br>
-                </br>
                 
         </div>
+
+        <div class="col-sm-2 text-center">
+                        <img src={{cluster.0.2}} class="img-rounded" height="105" width="105" alt="Avatar">
+                        </br>
+                        </br>
+
+        </div>
+        </div>  
 </div>
-</div>
+
 {%endfor%}
 {% endblock %}
+
+{%block content%}
+
+{%for word in list_of_keyword%}
+<a href="http://localhost:8000/google_news/showkeywordnews/{{word}}" class="btn btn-default" role="button">{{word}}</a>
+{%endfor%}
+{%endblock%}
 
 
 
