--- a/google_news/templates/google_news/ui.html
+++ b/google_news/templates/google_news/ui.html
@@ -7,10 +7,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"> </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"> </script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
   <style>    
     /* Set black background color, white text and some padding */
       footer {
@@ -35,17 +43,39 @@
     /* the rest of your styling */
 }
 
+#navBarSearchForm input[type=text]{width:580px !important;}
+
   </style>
+
 </head>
 <body>
 
-<div class="navbar navbar-fixed-top navbar-default">
+<div class="navbar navbar-fixed-top navbar-default navbar-expand-sm mt-4">
   <div class="shadow p-3 mb-5 bg-white rounded">
-    <div class="container-fluid ">
-        <div class="navbar-header"><a class="navbar-brand" href="#"><strong>Media.net News</strong></a>
+    
+
+          <div class="row">
+ <div class="col-sm-3">
+   
+
+        <a class="navbar-brand" href="/google_news/"><strong>Media.net News</strong></a>
+ </div>
+
+   <div class="col-sm-7" id="navBarSearchForm">
+        <form class="navbar-form" role="search" action="/google_news/search/">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search By Keywords" name="search">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
         </div>
+        </form>
     </div>
-</div>
+
+
+      </div>
+ </div>
+
 </div>
 
 <div class="container-fluid">
@@ -56,14 +86,13 @@
                <div id="topheader">
                 <ul class="nav nav-pills nav-stacked">
 
-                  <li class="{% ifequal request.path '/google_news/'%} active {% endifequal%}"><a href="{% url 'top_stories' %}">Top Stories</a></li>
-                    <li class="{% ifequal request.path '/google_news/Sports/'%} active {% endifequal%}"><a href ="{% url 'sports' %}">Sports</a></li>
-
-                    <li class="{% ifequal request.path '/google_news/Entertainment/'%} active {% endifequal%}"><a href="{% url 'entertainment' %}">Entertainment</a></li>
-                    <li class="{% ifequal request.path '/google_news/Technology/'%} active {% endifequal%}"><a href="{% url 'technology' %}">Technology</a></li>
-                    <li class="{% ifequal request.path '/google_news/Business/'%} active {% endifequal%}"><a href="{% url 'business' %}">Business</a></li>
-                    <li class="{% ifequal request.path '/google_news/Science/'%} active {% endifequal%}"><a href="{% url 'science' %}">Science</a></li>
-                    <li class="{% ifequal request.path '/google_news/World/'%} active {% endifequal%}"><a href="{% url 'world' %}">World</a></li>
+                  <li class="{% ifequal request.path '/google_news/'%} active {% endifequal%}"><a href="{% url 'top_stories' %}"><i class="fas fa-star" style="margin-right: 5%"></i>Top Stories</a></li>
+                    <li class="{% ifequal request.path '/google_news/Sports/'%} active {% endifequal%}"><a href ="{% url 'sports' %}"><i class="fas fa-futbol" style="margin-right: 5%"></i>Sports</a></li>
+                    <li class="{% ifequal request.path '/google_news/Entertainment/'%} active {% endifequal%}"><a href="{% url 'entertainment' %}"><i class="fas fa-film" style="margin-right: 5%"></i>Entertainment</a></li>
+                    <li class="{% ifequal request.path '/google_news/Technology/'%} active {% endifequal%}"><a href="{% url 'technology' %}"><i class="fas fa-microchip" style="margin-right: 5%"></i>Technology</a></li>
+                    <li class="{% ifequal request.path '/google_news/Business/'%} active {% endifequal%}"><a href="{% url 'business' %}"><i class="fas fa-briefcase" style="margin-right: 5%"></i>Business</a></li>
+                    <li class="{% ifequal request.path '/google_news/Science/'%} active {% endifequal%}"><a href="{% url 'science' %}"><i class="fas fa-flask" style="margin-right: 5%"></i>Science</a></li>
+                    <li class="{% ifequal request.path '/google_news/World/'%} active {% endifequal%}"><a href="{% url 'world' %}"><i class="fas fa-globe-asia" style="margin-right: 5%"></i>World</a></li>
                 </ul>
                 <br>
             </div>
@@ -80,6 +109,7 @@
                         {% block cont %}
 
                         {% endblock %}
+                        
                   
                 </div>
             </div>
@@ -89,21 +119,22 @@
      <!-- Middle part complete -->
 
         <div class="col-sm-3"> 
-            <div class="btn-group">
-              <a href="" class="btn btn-primary">India</a>
-              <a href="US" class="btn btn-primary">United States</a>
-            </div>
+
             <div class="well"> 
-                <b>Weather</b>
+                <b>
+                  <a class="weatherwidget-io" href="https://forecast7.com/en/19d0872d88/mumbai/" data-label_1="MUMBAI" data-label_2="WEATHER" data-theme="marine" >MUMBAI WEATHER</a>
+                  <script>
+                  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+                  </script>
+                </b>
             </div>
             <div class="well">
                 <b>In the news</b>
                 <hr style="border-color:grey"></hr>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Dscwcwcwcwefault</button>
-                <button type="button" class="btn btn-default">D</button>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Default</button>
+                {% block content %}
+                
+               
+                {% endblock %}
             </div>
         </div>
     </div>
