--- a/google_news/templates/google_news/ui.html
+++ b/google_news/templates/google_news/ui.html
@@ -40,8 +40,8 @@
     /* the rest of your styling */
 }
 
-#navBarSearchForm input[type=text]{width:580px !important;}
-
+#navBarSearchForm input[type=text]{width:270% !important;}
+#navBarSearchForm {margin-left: 27%;}
 /*update toggle */
 
 
@@ -52,7 +52,7 @@ div.content {
 }
 
 
-.sidebar {
+.sidebar-nav-fixed {
   margin: 0;
   padding: 0;
 
@@ -61,6 +61,31 @@ div.content {
   height: 100%;
   overflow: auto;
 }
+
+
+@media screen and (max-width: 1100px) {
+  .sidebar-nav-fixed {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar-nav-fixed a {float: left;}
+  div.content {margin-left: 0;}
+  #navBarSearchForm input[type=text]{width:150% !important;}
+}
+
+@media screen and (max-width: 800px) {
+  .sidebar-nav-fixed a {
+   
+    float: none;
+  }
+   #navBarSearchForm input[type=text]{width:50% !important;}
+   .c{
+    margin-top: 25px;
+   }
+}
+
+
 
 
 /* end toggle */
@@ -81,25 +106,33 @@ div.content {
         $("#"+bttn.id).html("View more");
     }
 }
+
+function hidebutton(bttn) {
+    var x = document.getElementById(bttn);
+    x.style.display = "none";
+}
+
+
 </script>
 <div class="navbar navbar-fixed-top navbar-default navbar-expand-sm mt-4">
   <div class="shadow p-3 mb-5 bg-white rounded">
     
 
-          <div class="row">
- <div class="col-sm-3">
+
    
 
         <a class="navbar-brand" href="/google_news/"><strong>Media.net News</strong></a>
+        <div class="navbar-brand navbar-right" style="margin-right: 1%">{% block loc %}{% endblock%}</div>
  </div>
 
-   <div class="col-sm-7" id="navBarSearchForm">
+   <div  id="navBarSearchForm">
         <form class="navbar-form" role="search" action="/google_news/search/">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search By Keywords" name="search">
-            <div class="input-group-btn">
+          <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
+            <input type="text" class="form-control" placeholder="Search By Keywords" name="search">
+            
         </div>
         </form>
     </div>
@@ -118,10 +151,10 @@ div.content {
 </br>
   </div>
 </div>
-<div class="container-fluid">
+<div class="c container-fluid" >
    
          
-            <div class="sidebar-nav-fixed affix">  
+            <div class="sidebar-nav-fixed affix" >  
                <div id="topheader">
                 <ul class="nav nav-pills nav-stacked">
 
@@ -168,7 +201,7 @@ div.content {
      
      <!-- Middle part complete -->
 
-        <div class="col-sm-3"> 
+        <div class="col-sm-3" style="z-index: 1"> 
 
             <div class="well"> 
                 <b>
